--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -32,6 +32,16 @@
   year={2019}
 }
 
+@INPROCEEDINGS{marshalling_auto_generation,
+  author={Dietz, P. and Weigert, T. and Weil, F.},
+  booktitle={Proceedings. 2nd IEEE Workshop on Industrial Strength Formal Specification Techniques}, 
+  title={Formal techniques for automatically generating marshalling code from high-level specifications}, 
+  year={1998},
+  volume={},
+  number={},
+  pages={40-47},
+  doi={10.1109/WIFT.1998.766296}}
+
 @article{oop_paradignm,
 author = {Wegner, Peter},
 title = {Concepts and Paradigms of Object-Oriented Programming},
