--- a/Papers/ICCC-2023/bibliography.bib
+++ b/Papers/ICCC-2023/bibliography.bib
@@ -31,6 +31,12 @@
   pages={129--140},
   year={2019}
 }
+@inproceedings{novillo2007gcc,
+  title={GCC internals},
+  author={Novillo, Deigo},
+  booktitle={International Symposium on Code Generation and Optimization (CGO), San Jose, California},
+  year={2007}
+}
 
 @INPROCEEDINGS{marshalling_auto_generation,
   author={Dietz, P. and Weigert, T. and Weil, F.},
@@ -90,6 +96,16 @@ booktitle = {Encyclopedia of Computer Science},
 pages = {129–131},
 numpages = {3}
 }
+
+@book{hsu2021llvm,
+  title={LLVM Techniques, Tips, and Best Practices Clang and Middle-End Libraries: Design powerful and reliable compilers using the latest libraries and tools from LLVM},
+  author={Hsu, M.Y.},
+  isbn={9781838829728},
+  url={https://books.google.pl/books?id=g\_wqEAAAQBAJ},
+  year={2021},
+  publisher={Packt Publishing}
+}
+
 
 @article{wen2006analysis,
   title={Analysis of C++ function overload implementation},
