--- a/Papers/ICCC-2023/c-=-1.tex
+++ b/Papers/ICCC-2023/c-=-1.tex
@@ -62,6 +62,10 @@
 \usepackage{subcaption} %% For complex figures with subfigures/subcaptions
                         %% http://ctan.org/pkg/subcaption
 \usepackage{graphics}
+\usepackage{listings}
+
+\lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
+\lstset{framextopmargin=50pt,frame=bottomline}
 
 \begin{document}
 
