--- a/Papers/ICCC-2023/sections/design.tex
+++ b/Papers/ICCC-2023/sections/design.tex
@@ -7,6 +7,8 @@ The primary purpose of the language was to research how these ideas influence so
 
 \subsection{Type system}
 
+C-=-1 type system heavily borrows from C++.
+
 \subsection{Attributes and metaprogramming}
 
 \section{Design of the compiler}
