--- a/Papers/ICCC-2023/c-=-1.tex
+++ b/Papers/ICCC-2023/c-=-1.tex
@@ -76,7 +76,7 @@
 %\titlenote{with title note}             %% \titlenote is optional;
                                         %% can be repeated if necessary;
                                         %% contents suppressed with 'anonymous'
-\subtitle{CTFE first approach to compiler construction}                     %% \subtitle is optional
+\subtitle{CTFE First approach to compiler construction}                     %% \subtitle is optional
 %\subtitlenote{with subtitle note}       %% \subtitlenote is optional;
                                         %% can be repeated if necessary;
                                         %% contents suppressed with 'anonymous'
@@ -98,7 +98,6 @@
                                         %% can be repeated if necessary
 \orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \position{Student}
   \department{Department of Electronics and Information Technology}              %% \department is recommended
   \institution{Warsaw University of Technology}            %% \institution is required
   \streetaddress{Nowowiejska 15/19}
@@ -113,7 +112,6 @@
 \author{Ilona Bluemke}
 \orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
 \affiliation{
-  \position{Lecturer}
   \department{Department of Electronics and Information Technology}              %% \department is recommended
   \institution{Warsaw University of Technology}            %% \institution is required
   \streetaddress{Nowowiejska 15/19}
@@ -175,24 +173,6 @@
 \input{sections/implementation.tex}
 
 \input{sections/conclusions.tex}
-
-
-%% Acknowledgments
-\begin{acks}                            %% acks environment is optional
-                                        %% contents suppressed with 'anonymous'
-  %% Commands \grantsponsor{<sponsorID>}{<name>}{<url>} and
-  %% \grantnum[<url>]{<sponsorID>}{<number>} should be used to
-  %% acknowledge financial support and will be used by metadata
-  %% extraction tools.
-  This material is based upon work supported by the
-  \grantsponsor{GS100000001}{National Science
-    Foundation}{http://dx.doi.org/10.13039/100000001} under Grant
-  No.~\grantnum{GS100000001}{nnnnnnn} and Grant
-  No.~\grantnum{GS100000001}{mmmmmmm}.  Any opinions, findings, and
-  conclusions or recommendations expressed in this material are those
-  of the author and do not necessarily reflect the views of the
-  National Science Foundation.
-\end{acks}
 
 
 %% Bibliography
