--- a/Papers/ICCC-2023/sections/conclusions.tex
+++ b/Papers/ICCC-2023/sections/conclusions.tex
@@ -11,3 +11,8 @@ Since a significant part of the compiler is interpreted, developing it means wor
 This makes wirting the code as well as debugging it significantly more difficult.
 However, this drawback also means that work on the compiler in the target language may start as early as stage 0 of compiler bootstraping\cite{puntambekar:compiler_design, novillo2007gcc}.
 
+The compiler created for C-=-1, has unaceptable performance, as noted by the original C-=-1 paper \cite{grabski2022compilation}.
+Compiling the C-=-1 standard library, containing around 200 lines of code, takes aproximatley 10 minutes.
+Majority of that time is spent on interpreting the compiler interface.
+This is a significant barier to adopting CTFE First approach.
+Since the compiler implemented for C-=-1 was made as a research tool with minimal effort, further work is needed to determine the CTFE First approach has on performance.
