--- a/Papers/ICCC-2023/sections/design.tex
+++ b/Papers/ICCC-2023/sections/design.tex
@@ -6,6 +6,8 @@ What diffirentiates C-=-1 are its two founding principles: all code is executabl
 The primary purpose of the language was to research how these ideas influence software written in it \cite{grabski2022compilation}.
 
 C-=-1 is a simple language, built with the minimum set of features needed to demonstrate the usefulness of the proposed metaprogramming features.
+They are discussed further in chapter \ref{design:attributes_and_metaprogramming}.
+The primary motivation for those mechanisms, is providing the programmer with the ability to create domain specific static analysis and code generation tools, without creating a seperate program.
 
 \subsection{Type system}
 
@@ -16,6 +18,7 @@ The user may also use pointers to objects, with arbitrary indirection (for examp
 Additionally, the language contains the concept of an \lstinline{interface}, similar to the one found in C\#.
 
 \subsection{Attributes and metaprogramming}
+\label{design:attributes_and_metaprogramming}
 
 Metaprogramming in C-=-1 is based around attributes.
 Attributes work in a manner similar to the ones found in C\#.
@@ -70,6 +73,37 @@ whether a function is invokable at run or compile time.
 The \lstinline{onCall} method is an example of a function reacting to usage of the annotated program element.
 They are speciffic to a given attribute target.
 Within this function, the attribute may analyze and modify the code, as well as raise errors or warnings.
+
+Lines 6 to 11 of Listing \ref{lst:noDiscardCm1} are an example of a C-=-1 attribute providing static analysis.
+The \lstinline{onCall} method checks whether the attached function is invoked in an expression or instruction context.
+Calling a function as a statment means that the result of that invocation is discarded by the caller.
+This is may indicate an error, when the function has no other side effects.
+If that is the case, the attribute calls the \lstinline{raiseError} function, which is provided as a compiler intrinsic, that generates a compilation error.
+The example presented in Listing \ref{lst:noDiscardCm1}, although very basic, demonstrates the ability to implement a form of static analysis that typically requires modyfining the compiler or creating an external tool.
+
+\begin{minipage}{\linewidth}
+
+	\begin{lstlisting}[
+	  numbers=left,
+	  firstnumber=0,
+	  caption={Example of using noDiscard attribute from Listing \ref{lst:noDiscardCm1}},
+	  aboveskip=0pt,
+	  label={lst:noDiscardUsageCm1}
+	  ]
+  [noDiscard()]
+  fn noDiscardFunction() -> usize;
+
+  fn main() -> usize
+  {
+	noDiscardFunction();
+	// error 123: Return value of
+	// a no-discard function is not used
+	let x = noDiscardFunction();     // ok
+	let y = x + noDiscardFunction(); // ok
+	return noDiscardFunction();      // ok
+  }
+  \end{lstlisting}
+\end{minipage}
 
 \section{Design of the compiler}
 \label{compiler-design}
